更好的API与调试，更多功能，还不能输出MIDI

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}/index.js",
-            "args": ["-i","917666"],
+            "args": ["--@j*9","-d"],
             
         }
     ]
