--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "homepage": "https://github.com/ThebestkillerTBK/chongchong-free",
   "dependencies": {
     "jszip": "^3.7.1",
+    "midi-writer-js": "^2.0.1",
     "minimist": "^1.2.5",
     "needle": "^3.0.0"
   }
