--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "jszip": "^3.7.1",
     "minimist": "^1.2.5",
     "needle": "^3.0.0",
+    "pkg": "^5.5.2",
     "tonal-midi": "^0.69.7"
-  }
+  },
+  "bin":"index.js",
+  "scripts": {
+    "run": "node index.js --@j*9",
+    "dist": "pkg . --targets node14-win-x64,node14-macos-x64,node14-linux-x64 -o ./dist/chongchong-free"
+ }
 }
