--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "bin":"index.js",
   "scripts": {
-    "run": "node index.js --@j*9",
-    "dist": "pkg . --targets node14-win-x64,node14-macos-x64,node14-linux-x64 -o ./dist/chongchong-free"
+    "run": "node index.js --dbg",
+    "build": "pkg . --targets node14-win-x64,node14-macos-x64,node14-linux-x64 -o ./dist/chongchong-free"
  }
 }
