测试新的速度调节系统

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,19 @@
 {
     "version": "0.2.0",
     "configurations": [
+    {
+        "name": "CCMZ Test",
+        "program": "${workspaceFolder}/test.js",
+        "request": "launch",
+        "skipFiles": [
+            "<node_internals>/**"
+        ],
+        "type": "pwa-node"
+    },
         {
             "type": "pwa-node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "debug",
             "skipFiles": [
                 "<node_internals>/**"
             ],
